# rust_trading_system

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  eslint.config.mjs  package-lock.json  package.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/binance_client/: client.rs  client_async.rs  errors.rs  market.rs  mod.rs
src/binance_client/futures/: mod.rs
src/bookticker_stream/: bookticker.rs
src/common_structs/: book_ticker.rs  mod.rs
src/execution/: mod.rs
src/order_stream/: mod.rs  order_update.rs
src/shared/: aws_client.rs  mod.rs  timestamp.rs
src/websockets/: mod.rs  price_data.rs  structs.rs
