[package]
name = "rust_order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "^1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
reqwest = {version ="0.12.8", features=['json']}
url = "2.5.2"
chrono = "0.4"
